fix: change text-overflow property

--- a/singolo2.css
+++ b/singolo2.css
@@ -126,6 +126,8 @@ body{
     line-height: 18px;
     text-align: left;
     letter-spacing: 0.1px;
+    overflow: auto;
+    text-overflow: clip;
     color: #666d89;
 }
 
